manifests/stage/deployment_container_env.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: user-deployment
spec:
  template:
    spec:
      containers:
        - name: user
